# Remote_Puppet_Show

./: .gitmodules  README.md
Puppet_Controller/: CMakeLists.txt
Puppet_Controller/main/: CMakeLists.txt  esp_central.h  main.c  misc.c  peer.c
Puppet_Receiver/: CMakeLists.txt
Puppet_Receiver/main/: CMakeLists.txt  main.c
